# owowon

./: 50-owon-hds.rules  Cargo.toml  README.md  RELEASES.md
.github/workflows/: ci.yml  release.yml
owowon-gui/: Cargo.toml
owowon-gui/src/: app.rs  device_select.rs  main.rs
owowon-tinker-cli/: Cargo.toml
src/: device.rs
