[package]
name = "owowon-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
egui = { version = "0.27.2" }
egui_plot = { version = "0.27.2" }
eframe = { version = "0.27.2", features = ["persistence"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt"] }
float-cmp = "0.9"
snafu = { workspace = true }
nusb = { workspace = true }

owowon = { path = ".." }
